add 25 mb internet

--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -123,6 +123,7 @@
                         <figure class="pricing-row">Up to 20 channels</figure>
                         <figure class="pricing-row">Full Interactive TV guide</figure>
                         <figure class="pricing-row">Includes community channels</figure>
+                        <figure class="pricing-row">Requires Internet of +25MB/s</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer style3">
                         <div class="gem-button-container gem-button-position-center style3">
