--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -166,6 +166,7 @@
                         <figure class="pricing-row">Total 80 channels</figure>
                         <figure class="pricing-row">Includes OP Basic and all major TV Networks</figure>
                         <figure class="pricing-row">Includes 72 hour Replay TV feature</figure>
+                        <figure class="pricing-row">Requires Internet of +25MB/s</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center">
@@ -209,7 +210,8 @@
                         <figure class="pricing-row style2">Includes PVR video recording</figure>
                         {{!-- <figure class="pricing-row style2">25 hours of Cloud DVR</figure> --}}
                         <figure class="pricing-row style2">Includes 72 hour Replay TV</figure>
-                        <figure class="pricing-empty style2"></figure>
+                        <figure class="pricing-row">Requires Internet of +25MB/s</figure>
+                        {{!-- <figure class="pricing-empty style2"></figure> --}}
                         <!-- <div class="pricing-footer"> -->
                         <div class="gem-button-position-center style2">
                             <a href="/compareplans" class="gem-button gem-orange style2">Compare Plans</a>
