--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="images/webclip.png" rel="apple-touch-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" />
-     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {{!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" /> --}}
+    <link rel="stylesheet" href="../../node_modules/sweetalert2/dist/sweetalert2.css">
 </head>
 <body>
     {{!-- Navbar --}}
@@ -23,10 +23,12 @@
     {{!-- Footer --}}
    
 
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
-    <script>
+    {{!-- <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script> --}}
+    {{!-- <script>
         AOS.init();
-    </script>
+    </script> --}}
+    <script src="../../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+
     <script src="../../public/js/nav.js"></script>
      {{> (lookup . 'partial') }}
 </body>
