--- a/views/pages/accountPage.handlebars
+++ b/views/pages/accountPage.handlebars
@@ -18,7 +18,7 @@
                         <p>{{data.userDetails.Email}}</p>
                         {{/if}}
                         <button onclick="openEditProfileModal()">Edit Profile</button>
-                        <button id="schedule-btn">Schedule Call</button>
+                        {{!-- <button id="schedule-btn">Schedule Call</button> --}}
                         
                       
                     </div>
