--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
     <!-- Footer -->
     <footer class="footer" id="footer">
         <div class="footer-logo">
-            <img src="../../public/images/g2.png" alt="XSTream Cable" class="footer-logo-image">
+            <img src="../../public/images/blackXstreamLogoPNG_processed.png" alt="XSTream Cable" class="footer-logo-image">
         </div>
         <div class="social-icons">
             <a href="#" class="social-icon">Privacy Policy  &nbsp;|</a>
