new changes priority

--- a/views/pages/addservicesPage.handlebars
+++ b/views/pages/addservicesPage.handlebars
@@ -44,9 +44,9 @@
                             
                             </div>
                             <div class="dots-container-op-basic style3">
-                                <button class="carousel-btn left-btn style3"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
+                                <button class="carousel-btn left-btn style3"><i class="icon-chevron-left" aria-hidden="true"></i></button>
                                 <!-- <span class="dot" data-slide="0"></span> -->
-                                <button class="carousel-btn right-btn style3"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
+                                <button class="carousel-btn right-btn style3"><i class="icon-chevron-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
                         <figure class="pricing-row">Up to 20 channels</figure>
@@ -90,9 +90,9 @@
                             
                             </div>
                             <div class="dots-container-choice">
-                                <button class="carousel-btn left-btn3"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
+                                <button class="carousel-btn left-btn3"><i class="icon-chevron-left" aria-hidden="true"></i></button>
                                 <!-- <span class="dot" data-slide="0"></span> -->
-                                <button class="carousel-btn right-btn3"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
+                                <button class="carousel-btn right-btn3"><i class="icon-chevron-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
                         <figure class="pricing-row">Total 80 channels</figure>
@@ -137,8 +137,8 @@
                             
                             </div>
                             <div class="dots-container-preferred">
-                                <button class="carousel-btn2 left-btn2"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
-                                <button class="carousel-btn2 right-btn2"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
+                                <button class="carousel-btn2 left-btn2"><i class="icon-chevron-left" aria-hidden="true"></i></button>
+                                <button class="carousel-btn2 right-btn2"><i class="icon-chevron-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
 
@@ -224,9 +224,11 @@
                 <div class="inner">
         
                     <span class="pricing Extended">
+                        <div class="sub-cards-item_bg1">
                         <span>
                             +${{data.expanded.Price}} <small>/ m</small>
                         </span>
+                        </div>
                     </span>
                     <h2 class="title">{{data.expanded.Name}}</h2>
                     <p class="info">Plan available to Preferred Plan Subscribers.</p>
@@ -284,9 +286,11 @@
               <div class="inner">
       
                   <span class="pricing Sports">
+                    <div class="sub-cards-item_bg1">
                       <span>
                           +${{data.sports.Price}} <small>/ m</small>
                       </span>
+                      </div>
                   </span>
                   <h2 class="title">{{data.sports.Name}}</h2>
                   <p class="info">Plan available to Preferred Plan Subscribers.</p>
@@ -342,9 +346,11 @@
               <div class="inner">
       
                   <span class="pricing HBO">
+                    <div class="sub-cards-item_bg1">
                       <span>
                           +${{data.hbo.Price}} <small>/ m</small>
                       </span>
+                      </div>
                   </span>
                   <h2 class="title">{{data.hbo.Name}} Premium</h2>
                   <p class="info">Plan available to Preferred Plan Subscribers.</p>
@@ -409,9 +415,11 @@
               <div class="inner">
       
                   <span class="pricing Cinemax">
+                    <div class="sub-cards-item_bg1">
                       <span>
                           {{!-- +${{data.spanish.Price}} <small>/ m</small> --}}
                       </span>
+                      </div>
                   </span>
                   <h2 class="title">{{data.spanish.Name}}</h2>
                   <p class="info">Plan available to Preferred Plan Subscribers.</p>
