--- a/views/pages/registerPage.handlebars
+++ b/views/pages/registerPage.handlebars
@@ -83,14 +83,14 @@
                               <input type="text" placeholder="Last Name" name="LastName" required>
                             </div>
                           </div>
-                           <div class="container-1">
-                               <div class="field">
+                           {{!-- <div class="container-1"> --}}
+                               {{!-- <div class="field">
                                  <input type="number" placeholder="Apt/Unit" name="AptNo" required>
-                              </div>
+                              </div> --}}
                                <div class="field">
                                  <input type="text" placeholder="Full Street Address" name="Street" required>
                               </div>
-                           </div>
+                           {{!-- </div> --}}
                         
                          <div class="container-2">
                             <div class="field">
