--- a/public/css/addservices.css
+++ b/public/css/addservices.css
@@ -506,13 +506,12 @@ justify-content: center;
 transition: transform 0.3s ease;
 width: 100%;
 }
-.pricing-empty:before {
-  vertical-align: middle;
- content: "\f058";
-  font-family: "Font Awesome 5 Free";
+.pricing-empty::before {
+  content: "✖"; /* Unicode cross (X) mark */
+  font-size: 16px;
   color: #080509;
-  text-align: center;
-  padding-right: 10px;
+  vertical-align: middle;
+  margin-right: 10px;
 }
 .pricing-empty
 {
@@ -667,15 +666,21 @@ text-align: left;
 font-size: 22px;
 }
 
-.pricing-row:before {
+/* .pricing-row:before {
 vertical-align: middle;
 content: "\f058";
 font-family: "Font Awesome 5 Free";
 color: #00bfa5;
 text-align: center;
 padding-right: 10px;
+} */
+.pricing-row::before {
+  content: "✔"; /* Unicode checkmark */
+  font-size: 16px;
+  color: #00bfa5;
+  vertical-align: middle;
+  margin-right: 10px;
 }
-
 .strike:before
 {
 content:none;
@@ -1092,9 +1097,35 @@ margin-right: 5px;
   background: linear-gradient(71deg, #080509, #1a171c, #080509);
   border-radius: 12px;
   position: relative;
+  overflow: hidden;
   height: 570px;
 }
 
+.sub-cards-item_bg1 {
+  height: 128px;
+  width: 128px;
+  background-color: #069bd9;
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+.sub-cards-item_bg1  span{
+  position: relative;
+  top: 85px;
+  right: -10px;
+}
+.plan .inner:hover .sub-cards-item_bg1 {
+  -webkit-transform: scale(3);
+  -ms-transform: scale(3);
+  transform: scale(3);
+}
 .plan .pricing {
   position: absolute;
   top: 0;
@@ -1104,7 +1135,7 @@ margin-right: 5px;
   display: flex;
   align-items: center;
   padding: 0.625em 0.75em;
-  font-size: 1.25rem;
+  font-size: 0.55rem;
   font-weight: 600;
   color: #fff;
 }
@@ -1618,4 +1649,19 @@ animation: slide-in 0.5s ease-out;
   cursor: not-allowed;
   opacity: 0.6;
   pointer-events: none; /* Prevent interaction */
+}
+.icon-chevron-left {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_left/v14/24px.svg') no-repeat center center;
+  background-size: contain;
+}
+
+.icon-chevron-right {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_right/v14/24px.svg') no-repeat center center;
+  background-size: contain;
 }
