--- a/public/css/cable.css
+++ b/public/css/cable.css
@@ -311,6 +311,7 @@ text-transform: uppercase;
   color: #fff;
   font-weight: 600;
   line-height: 60px;
+  
 }
 
 .card {
@@ -318,12 +319,35 @@ text-transform: uppercase;
   border: 0;
   width: 100%;
   margin-inline: auto;
+  position: relative;
+  overflow: hidden;
 
+}
+.sub-cards-item_bg2 {
+  height: 128px;
+  width: 128px;
+  background-color: #ffa039;
+  /* background-color: #ffbd39; */
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
 }
 
 .card:hover{
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
   transform: scale(1.11);
+}
+.card:hover .sub-cards-item_bg2{
+  -webkit-transform: scale(3);
+  -ms-transform: scale(3);
+  transform: scale(3);
 }
 .container-card {
   position: relative;
@@ -369,6 +393,8 @@ text-transform: uppercase;
   font-style: normal;
   font-size: 32px;
   padding-bottom: 8px;
+  z-index: 2;
+  position: relative;
 }
 
 .card-description {
@@ -380,6 +406,8 @@ text-transform: uppercase;
   max-height: 200px; /* Initial height for collapsed state */
   overflow: hidden;
   transition: max-height 0.3s ease-out;
+  z-index: 2;
+  position: relative;
 }
 .card-description.expanded {
   max-height: 400px; /* Expanded height */
@@ -594,22 +622,27 @@ display: block;
   text-align: left;
   font-size: 22px;
 }
-
-.pricing-row:before {
+.pricing-row::before {
+  content: "✔"; /* Unicode checkmark */
+  font-size: 16px;
+  color: #00bfa5;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+/* .pricing-row:before {
   vertical-align: middle;
  content: "\f058";
   font-family: "Font Awesome 5 Free";
   color: #00bfa5;
   text-align: center;
   padding-right: 10px;
-}
-.pricing-empty:before {
-  vertical-align: middle;
- content: "\f058";
-  font-family: "Font Awesome 5 Free";
+} */
+.pricing-empty::before {
+  content: "✖"; /* Unicode cross (X) mark */
+  font-size: 16px;
   color: #080509;
-  text-align: center;
-  padding-right: 10px;
+  vertical-align: middle;
+  margin-right: 10px;
 }
 .pricing-empty
 {
@@ -891,9 +924,34 @@ overflow:hidden;
   background: linear-gradient(71deg, #080509, #1a171c, #080509);
   border-radius: 12px;
   position: relative;
+  overflow: hidden;
   height: 570px;
 }
+.sub-cards-item_bg1 {
+  height: 128px;
+  width: 128px;
+  background-color: #069bd9;
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
 
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+.sub-cards-item_bg1  span{
+  position: relative;
+  top: 85px;
+  right: -10px;
+}
+.plan .inner:hover .sub-cards-item_bg1 {
+  -webkit-transform: scale(3);
+  -ms-transform: scale(3);
+  transform: scale(3);
+}
 .plan .pricing {
   position: absolute;
   top: 0;
@@ -903,7 +961,7 @@ overflow:hidden;
   display: flex;
   align-items: center;
   padding: 0.625em 0.75em;
-  font-size: 1.25rem;
+  font-size: 0.55rem;
   font-weight: 600;
   color: #fff;
 }
@@ -1688,4 +1746,19 @@ from {
 to {
     transform: translateX(0);
 }
+}
+.icon-chevron-left {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_left/v14/24px.svg') no-repeat center center;
+  background-size: contain;
+}
+
+.icon-chevron-right {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_right/v14/24px.svg') no-repeat center center;
+  background-size: contain;
 }
