--- a/views/pages/homePage.handlebars
+++ b/views/pages/homePage.handlebars
@@ -162,9 +162,12 @@
             <h1 class="platform-title">XSTREAM <span style="color: #FFAB00;">INTERNET</span> & <span style="color: #FFC200;">PHONE</span> PLATFORM</h1></div>
         <div class="relative-feature">
             
-                <div class="card card-1 ">
+                <div class="card card-1">
+                    <div class="sub-cards-item_bg1"></div>
                     <div class="card__icon"><i class="fas fa-wifi"></i></div>
+                    
                     <h2 class="card__title">Ultra high-speed internet up to 100Mbps.</h2>
+                    
                     <p class="card__apply">
                         Nothing beats optical fiber technology in providing fast, reliable, and affordable access to the internet. We offer plans to fit almost any budget. <br><br>
                       <a class="card__link" href="/internet">Internet Packages <i class="fas fa-arrow-right"></i></a>
@@ -173,6 +176,7 @@
             
            
                 <div class="card card-2">
+                    <div class="sub-cards-item_bg1"></div>
                     <div class="card__icon"><i class="fas fa-phone"></i></div>
                     <h2 class="card__title">Crisp. Crystal-Clear Calls Anywhere.</h2>
                     <p class="card__apply">
