minors css change

--- a/public/css/addservices.css
+++ b/public/css/addservices.css
@@ -1296,6 +1296,7 @@ margin-right: 5px;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: contain;
 }
 
 /* Dots for navigation */
@@ -1391,6 +1392,7 @@ animation: slide-in 0.5s ease-out;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: contain;
 }
 
 /* Dots for navigation */
@@ -1487,6 +1489,7 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 width: 100%;
 height: 100%;
 border-radius: 50%;
+object-fit: contain;
 }
 
 /* Dots for navigation */
