--- a/public/css/cable.css
+++ b/public/css/cable.css
@@ -1306,6 +1306,7 @@ overflow:hidden;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: contain;
 }
 
 /* Dots for navigation */
@@ -1401,6 +1402,7 @@ animation: slide-in 0.5s ease-out;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: contain;
 }
 
 /* Dots for navigation */
@@ -1497,6 +1499,7 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 width: 100%;
 height: 100%;
 border-radius: 50%;
+object-fit: contain;
 }
 
 /* Dots for navigation */
