--- a/public/css/addservices.css
+++ b/public/css/addservices.css
@@ -1657,7 +1657,7 @@ animation: slide-in 0.5s ease-out;
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_left/v14/24px.svg') no-repeat center center;
+  background: url('../images/chevron-left.svg') no-repeat center center;
   background-size: contain;
 }
 
@@ -1665,6 +1665,6 @@ animation: slide-in 0.5s ease-out;
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('https://fonts.gstatic.com/s/i/materialicons/chevron_right/v14/24px.svg') no-repeat center center;
+  background: url('../images/chevron-right.svg') no-repeat center center;
   background-size: contain;
 }
