--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -46,7 +46,7 @@
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <div class="sub-cards-item_bg2"></div>
-                                    <i class="fa-solid fa-trophy"></i>
+                                    <img src="../../public/images/white_trophy_icon.svg" class="trophy-icon" alt="Trophy Icon" width="44" height="34">
                                     <p class="card-title">Ultimate TV Viewing Experience</p>
                                     <p class="card-description">In-home streaming technology delivers crystal-clear High Definition Video, Surround Sound, Close Captions and FUNTASTIC Features so you can enjoy the best entertainment a vast selection of channels can provide.</p>
                                     <button class="read-more-btn ">Read More</button>
@@ -55,7 +55,7 @@
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <div class="sub-cards-item_bg2"></div>
-                                    <i class="fas fa-tv"></i>
+                                    <img src="../../public/images/white_tv_icon.svg" class="tv-icon" alt="Tv Icon" width="44" height="34">
                                     <p class="card-title">Stay Tuned to All Your TV Favorites</p>
                                     <p class="card-description">72 hour replay, Start Over, PVR and Resume features delivers the best TV experiences and allows you to watch what you want and when you want together with the whole home, different program watching option.</p>
                                     <button class="read-more-btn ">Read More</button>
@@ -64,7 +64,7 @@
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <div class="sub-cards-item_bg2"></div>
-                                    <i class="fa-solid fa-piggy-bank"></i>
+                                    <img src="../../public/images/white_piggy_bank_icon.svg" class="piggy_bank" alt="piggy_bank Icon" width="44" height="34">
                                     <p class="card-title">Simple Setup with superior features and savings</p>
                                     <p class="card-description">Free Cloud based PVR recordings, Free Replay TV, Free Resume and Start Over features without the need for any set top boxes or any additional hardware, totally eliminates these additional and costly add-ons while eliminating most of your cabling throughout your home resulting in significant monthly savings and therefore lower overall costs for TV and your entertainment.
                                         Additionally our very small TV modem which attaches directly to the TV via its HDMI port, turns any TV into a Smart TV with all those features that it brings, now you'll have the Ultimate in entertainment.
