--- a/views/pages/homePage.handlebars
+++ b/views/pages/homePage.handlebars
@@ -164,25 +164,25 @@
             
                 <div class="card card-1">
                     <div class="sub-cards-item_bg1"></div>
-                    <div class="card__icon"><i class="fas fa-wifi"></i></div>
+                    <div class="card__icon"><img src="../../public/images/wifi-white.svg" class="wifi-icon" alt="Wifi Icon" width="44" height="34"></div>
                     
                     <h2 class="card__title">Ultra high-speed internet up to 100Mbps.</h2>
                     
                     <p class="card__apply">
                         Nothing beats optical fiber technology in providing fast, reliable, and affordable access to the internet. We offer plans to fit almost any budget. <br><br>
-                      <a class="card__link" href="/internet">Internet Packages <i class="fas fa-arrow-right"></i></a>
+                      <a class="card__link" href="/internet">Internet Packages <img src="../../public/images/arrow-right-white.svg" class="arrow-icon" alt="Arrow Right Icon" width="24" height="14"></a>
                     </p>
                 </div>
             
            
                 <div class="card card-2">
                     <div class="sub-cards-item_bg1"></div>
-                    <div class="card__icon"><i class="fas fa-phone"></i></div>
+                    <div class="card__icon"><img src="../../public/images/phone-white.svg" class="phone-icon" alt="Phone Icon" width="44" height="34"></div>
                     <h2 class="card__title">Crisp. Crystal-Clear Calls Anywhere.</h2>
                     <p class="card__apply">
                         Voice over internet protocol (VOIP) has rapidly become the leading technology for landline telephones. Nothing has been proven better in call quality and reliability
                         <br><br>
-                      <a class="card__link" href="/phone">Get Unlimited Calls <i class="fas fa-arrow-right"></i></a>
+                      <a class="card__link" href="/phone">Get Unlimited Calls <img src="../../public/images/arrow-right-white.svg" class="arrow-icon"  alt="Arrow Right Icon" width="24" height="14"></a>
                     </p>
                 </div>
             
