--- a/views/pages/internetPage.handlebars
+++ b/views/pages/internetPage.handlebars
@@ -14,7 +14,7 @@
                 <div class="gradient-cards">
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fa-solid fa-trophy"></i>
+                                    <img src="../../public/images/white_trophy_icon.svg" class="trophy-icon" alt="Trophy Icon" width="44" height="34">
                                     <p class="card-title">Enjoy Effortless Browsing</p>
                                     <p class="card-description">Enjoy all that the Internet has to offer, seamless and uninterrupted streaming of all your favorite content.</p>
                                      <a href="/service" class="feature-card-btn">Compare Plans</a>
@@ -22,7 +22,7 @@
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fas fa-wifi"></i>
+                                    <img src="../../public/images/wifi-white.svg" class="wifi-icon" alt="Wifi Icon" width="44" height="34">
                                     <p class="card-title">High-Speed Internet to All Your Devices</p>
                                     <p class="card-description">The very best in Internet service either direct wired or wirelessly throughout your home without dead spots.</p>
                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
@@ -30,7 +30,7 @@
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fa-solid fa-piggy-bank"></i>
+                                     <img src="../../public/images/white_piggy_bank_icon.svg" class="piggy_bank" alt="piggy_bank Icon" width="44" height="34">
                                     <p class="card-title">Uninterrupted Performance. Better Savings</p>
                                     <p class="card-description"> A stable and robust Internet service ensures the best in performance and is superior to all satellite, traditional telephone or cellular based internet service plans and at a very competitive price.</p>
                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
