--- a/views/pages/phonePage.handlebars
+++ b/views/pages/phonePage.handlebars
@@ -15,7 +15,7 @@
                 <div class="gradient-cards">
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fa-solid fa-trophy"></i>
+                                    <img src="../../public/images/white_trophy_icon.svg" class="trophy-icon" alt="Trophy Icon" width="44" height="34">
                                     <p class="card-title">Perfect clarity on every call every time without blackouts</p>
                                     <p class="card-description">Our Internet based VOIP home phone service guarantees you can communicate and stay connected seamlessly even during severe weather conditions, emergency community events, blackouts or mobile phone disruptions.</p>
                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
@@ -23,7 +23,7 @@
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fas fa-phone"></i>
+                                   <img src="../../public/images/phone-white.svg" class="Phone-icon" alt="Phone Icon" width="44" height="34">
                                     <p class="card-title">Stay Connected</p>
                                     <p class="card-description">Make and receive calls day or night, you're never alone and you're never out of touch. Make any long distance calls anywhere in the Continental USA or its territories and also make calls to Canada in Mexico for free and talk as long as you like with perfect clarity. Long distance international calling is also available at preferred rates.</p>
                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
@@ -31,7 +31,7 @@
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
-                                    <i class="fa-solid fa-piggy-bank"></i>
+                                    <img src="../../public/images/white_piggy_bank_icon.svg" class="piggy_bank" alt="piggy_bank Icon" width="44" height="34">
                                     <p class="card-title">Seamless Calls. Better Savings</p>
                                     <p class="card-description">Crystal Clear reception from your home based phone, guarantees you'll never be out of touch again and ensures your loved one's can reach you when cell phone service is disrupted. Call 911 anytime and always.</p>
                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
