--- a/public/css/addservices.css
+++ b/public/css/addservices.css
@@ -908,6 +908,9 @@ overflow:hidden;
   padding: 2%;
   text-align: left;
   transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card:hover {
@@ -916,14 +919,14 @@ overflow:hidden;
 
 .card-title {
   margin-top: 5%;
-  font-size: 30px;
+  font-size: 32px;
   font-weight: bold;
   margin-bottom: 10px;
   color: #fff;
 }
 
 .card-content p {
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.6;
   /* color: #666; */
   color: #fff;
@@ -1098,7 +1101,10 @@ margin-right: 5px;
   border-radius: 12px;
   position: relative;
   overflow: hidden;
-  height: 570px;
+  height: 650px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .sub-cards-item_bg1 {
@@ -1141,12 +1147,12 @@ margin-right: 5px;
 }
 .plan .pricing small {
   color:#fff;
-  font-size: 0.75em;
+  font-size: 0.55rem;
   margin-left: 0.25em;
 }
 .plan .title {
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 32px;
   color: #fff;
 }
 .plan .title + * {
@@ -1154,17 +1160,17 @@ margin-right: 5px;
 }
 .plan .info + * {
   margin-top: 1rem;
-  font-size: 1rem;
+  font-size: 24px;
 }
 .info{
-  font-size: 1.1rem;
+  font-size: 24px;
 }
 .plan .features {
   display: flex;
   flex-direction: column;
 }
 .plan .features li span{
-  font-size: 1.2rem;
+  font-size: 24px;
 }
 .plan .features li {
   display: flex;
