--- a/public/css/cable.css
+++ b/public/css/cable.css
@@ -357,6 +357,9 @@ text-transform: uppercase;
   border-radius: 45px;
   padding: 40px;
   height: 100%;
+  display: flex;;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container-card i {
@@ -414,7 +417,7 @@ text-transform: uppercase;
   overflow-y: auto; /* Enable scroll if content exceeds expanded height */
 }
 .read-more-btn {
-  /* margin-top: 15%; */
+  margin-top: 5%;
   background-color: #ffa039;
   color: white;
   border: none;
@@ -434,8 +437,8 @@ text-transform: uppercase;
   text-transform: uppercase;
   white-space: nowrap;
   vertical-align: middle;
+  width: 150px;
 }
-
 .read-more-btn:hover {
   background-color: #2b2b2c;
 }
